infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  #This entire annotation section is what's going to help the ingress controller understand that we are trying to feed it some routing rules, so the ingress controller going to scan continuously all the different objects or all the different config files. So we are throwing into our cluster and it's going to try to find one that has this exact annotation
  annotations:
    kubernetes.io/ingress.class: nginx
    #spec.ingressClassName: nginx
    ##We need to add this to use regular expressions
    nginx.ingress.kubernetes.io/use-regex: "true"
    #ingressclass.kubernetes.io/is-default-class: "true"

spec:
  #Rules is going to have all the different routing rules that we want to apply to teach the ingress controller how to take the incoming traffic and route them off to our different pods
  rules:
    #This first routing rule is going to take the incoming traffic and send it off to our post service
    - host: www.sharing-prod.xyz
      ##
      #Ingress engine assuming that we might be hosting many different apps at different domains. So that's what this host property here all about
      http:
        paths:
          #To create a post
          - path: /api/v1/add-user-photos
            pathType: Prefix
            backend:
              #The service of posts
              service:
                name: user-photos-srv
                #The port of posts service
                port:
                  number: 6001

          #To create user ///////
          - path: /api/v1/users/?(.*)
            pathType: Prefix
            backend:
              #The service of posts
              service:
                name: main-app-srv
                #The port of posts service
                port:
                  number: 3000

            #To deal with chats ///////
          - path: /api/v1/chats/?(.*)
            pathType: Prefix
            backend:
              #The service of posts
              service:
                name: main-app-srv
                #The port of posts service
                port:
                  number: 3000

            #To deal with messages/////
          - path: /api/v1/messages/?(.*)
            pathType: Prefix
            backend:
              #The service of posts
              service:
                name: main-app-srv
                #The port of posts service
                port:
                  number: 3000

          - path: /?(.*)
            pathType: Prefix
            backend:
              #The service of posts
              service:
                name: client-srv
                #The port of posts service///

                port:
                  number: 80
# Just  a text to trigger infra
